Fix page heading sass

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,7 +2,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #03c299
+$kaldi-red: #1abc9c
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
