--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -73,6 +73,10 @@ $black: #2b2523
 
 .navbar-item .icon
   color: $primary
+
+.navbar-item img
+    max-height: fit-content
+
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
   width: 1.5rem
@@ -80,6 +84,7 @@ $black: #2b2523
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
+  margin-right: 4rem
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
