--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -77,6 +77,13 @@ $black: #2b2523
 .navbar-item img
     max-height: fit-content
 
+.navbar-item
+  flex-grow: 0
+  flex-shrink: 0
+  
+.navbar-item .navbar-item img
+  max-height: fit-content
+
 // Override for use of svg's from https://simpleicons.org/
 .icon svg
   width: 1.5rem
